[package]
name = "gbnet"
version = "0.1.0"
edition = "2024"
description = "A reliable UDP networking library"
license = "MIT"

[dependencies]
tokio = { version = "1.40.0", features = ["net", "time", "rt-multi-thread", "macros"] }
log = "0.4.22"
env_logger = "0.11.5"
thiserror = "1.0.65"
rand = "0.8.5"
byteorder = "1.5.0"