[package]
name = "gbnet"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["net", "time", "rt", "sync"] } # Async UDP, timers, concurrency
log = "0.4" # Debug logging
env_logger = "0.11" # Logging setup
rand = "0.8" # Random connection IDs
thiserror = "1.0" # Error handling
gbnet_derive = { path = "./gbnet_derive" } # Macro for Serialize/Deserialize

[features]
metrics = [] # Debugging metrics

[workspace]
members = ["gbnet_derive"]