[workspace]
members = ["gbnet", "gbnet_macros", "gbnet_unity"]
resolver = "2"

# Optimization settings for all crates
[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# Keep debug symbols in release for better debugging
[profile.release-with-debug]
inherits = "release"
strip = false
debug = true